# mid360_preprocessor

./: CMakeLists.txt  README.md  package.xml
include/mid360_preprocessor/: mid_concat_filter.hpp  mid_feature_extractor.hpp  ring_granter.hpp
launch/: mid360_concatenate.launch.xml  mid360_feature_extract_test.launch.xml  mid360_with_ring.launch.xml
src/: mid_concat_filter.cpp  mid_feature_extractor.cpp  ring_granter.cpp
